...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="Account_Logo,Account_Logo_Reset,Account_Logo_Edit" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_Name"
                style="@style/Locky.TextBox.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/field_account_name"
                app:endIconMode="clear_text"
...
                    android:inputType="textCapWords"
                    android:maxLength="@integer/restriction_field_entry_name"
                    android:text="@={ViewModel.accountName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_Username"
                style="@style/Locky.TextBox.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/field_account_username"
                app:endIconMode="clear_text"
...
                    android:maxLength="@integer/restriction_field_normal"
                    android:text="@={ViewModel.username}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_Email"
                style="@style/Locky.TextBox.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/field_account_email"
                app:endIconMode="clear_text"
...
                    android:inputType="textEmailAddress"
                    android:maxLength="@integer/restriction_field_long"
                    android:text="@={ViewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_Password"
                style="@style/Locky.TextBox.Default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                android:hint="@string/field_account_password"
...
                app:layout_constraintBottom_toBottomOf="@id/Account_Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/Account_Password"
                app:layout_constraintTop_toTopOf="@id/Account_Password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_Website"
                style="@style/Locky.TextBox.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/field_account_website"
...
            <TextView
                android:id="@+id/Label_Other"
                style="@style/Locky.Text.Subtitle.Smaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_others"
                app:layout_constraintStart_toStartOf="@id/Account_Auth"
                app:layout_constraintTop_toBottomOf="@+id/Barrier_Required" />

            <!--
            **************** Extra Text Fields ****************
            -->
            <com.google.android.material.textfield.TextInputLayout
...
                    android:inputType="textShortMessage|textCapCharacters"
                    android:maxLength="@integer/restriction_field_normal"
                    android:text="@={ViewModel.authType}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_2FA_Keys"
                style="@style/Locky.TextBox.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/field_account_2fakeys"
                app:endIconMode="clear_text"
...
                    android:maxLines="15"
                    android:minLines="2"
                    android:text="@={ViewModel.twoFaKeys}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_Comments"
                style="@style/Locky.TextBox.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/field_account_additional"
...

            <!--
            **************** Save Button ****************
            -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Save"
                style="@style/Locky.Button.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> ViewModel.save()}"
                android:text="@string/button_action_save"
                android:textAlignment="center"
...
