...

    <!-- =============== -->
    <!-- Notify Messages -->
    <!-- =============== -->
    <string name="message_internet_connection_unavailable">Please check your internet connection</string>
    <string name="message_copy_successful">Copied successfully</string>
    <string name="message_credentials_created">%1$s has been added successfully</string>
    <string name="message_credentials_modified">%1$s has been modified successfully</string>
    <string name="message_credentials_deleted">%1$s has been deleted</string>
    <string name="message_credentials_password_share">Hello, the password for device "%1$s" is "%2$s"</string>
    <string name="message_user_signin_cancelled">Sign-in has been cancelled</string>
    <string name="message_loading_logo">Loading your logos…</string>
    <string name="message_loading_logo_none">No logos found</string>
...

    <string name="message_passwordgenerator_configuration_notdone">Please configure password generator before generating</string>

    <!-- =============== -->
    <!-- Error Messages -->
    <!-- =============== -->
    <string name="error_field_validation_blank">This field cannot be empty</string>
    <string name="error_field_validation_cvc_format">Incorrect cvc entered</string>
    <string name="error_field_validation_password_notmatch">Passwords do not match</string>
    <string name="error_field_validation_password_criteria">Password length should be greater than 6</string>
    <string name="error_field_validation_password_notsame">Your current password is not correct</string>
    <string name="error_field_validation_email_format">Please enter a valid email</string>
    <string name="error_field_validation_id_after">Issued date cannot be after than expiry date</string>
    <string name="error_field_validation_ed_before">Expiry date cannot be before than issued date.</string>

    <string name="error_biometric_authentication_lockout">Too many attempts. Please try again later</string>
    <string name="error_biometric_authentication_lockout_permanent">Please use strong authentication (PIN/Password) to unlock the app</string>
    <string name="error_biometric_authentication_cancelled">Authentication cancelled</string>
...
